--- a/.github/workflows/import-test.yml
+++ b/.github/workflows/import-test.yml
@@ -50,6 +50,11 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    
+    - name: Install SWIG (macOS)
+      if: runner.os == 'macOS'
+      run: brew install swig
+    
     - name: Upgrade setuptools and wheel
       run: |
         python -m pip install --upgrade pip setuptools wheel
@@ -91,6 +96,10 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    
+    - name: Install SWIG (macOS)
+      if: runner.os == 'macOS'
+      run: brew install swig
     
     - name: Install dependencies
       run: |
