--- a/.github/workflows/import-test.yml
+++ b/.github/workflows/import-test.yml
@@ -11,8 +11,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ['3.10', '3.11', '3.12']
-        numpy-version: ['1.21.0', '1.22.0', '1.23.0', '1.24.0', '1.25.0', '1.26.0', '2.0.0']
-        torch-version: ['1.12.0', '1.13.0', '2.0.0', '2.2.0', '2.3.0']
+        numpy-version: ['1.24.0', '1.25.0', '1.26.0', '2.0.0', '2.1.0', '2.2.0', '2.3.0']
+        torch-version: ['2.6.0', '2.7.0', '2.8.0', '2.9.0']
         exclude:
           # PyTorch 1.12-1.13 don't support Python 3.11+
           - python-version: '3.11'
